Add support for configuring a patterns to match metric names that should be exported or not